--- a/AppStorePlayground/Base.lproj/Localizable.strings
+++ b/AppStorePlayground/Base.lproj/Localizable.strings
@@ -6,5 +6,6 @@
   Copyright © 2018 keyfun. All rights reserved.
 */
 
-"app_name" = "日本動畫新番";
-"search_placeholder" = "Search";
+"app_name" = "AppStore PlayGround";
+"search_placeholder" = "搜尋";
+"recommend" = "推介";
